--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -33,7 +33,9 @@
 @code-value: #BED5DD;
 @code-text: #DEE3E9;
 @code-attribute: #98E3FF;
+@code-attribute-dim: #68a0b5;
 @code-element: #FA516D;
+@code-element-dim: #ff637d;
 @code-string: #CAE69C;
 @code-keyword: #c792ea;
 @code-number: #f78556;
